# kmnlib

./: Cargo.toml  README.md
.github/workflows/: publish_api.yml
REST_api/: .gitignore  package.json  pnpm-lock.yaml
REST_api/src/: book.tsp  common.tsp  main.tsp  mq.tsp  rent.tsp  user.tsp
driver/: Cargo.toml
driver/src/: database.rs  error.rs
driver/src/database/: eventstore.rs  postgres.rs
driver/src/database/eventstore/: book.rs  user.rs
driver/src/database/postgres/: book.rs  user.rs
kernel/: Cargo.toml
kernel/src/: database.rs  entity.rs  error.rs  lib.rs
kernel/src/command/: book.rs  user.rs
kernel/src/entity/: book.rs  user.rs
kernel/src/entity/common/: event.rs
kernel/src/entity/rent/: returned_at.rs
kernel/src/event/: book.rs
kernel/src/query/: book.rs  user.rs
kmnlib_api/: package.json
kmnlib_api/src/: book.tsp  common.tsp  mq.tsp  user.tsp
kmnlib_back/: Cargo.toml  README.md  RestAPI.yml  flake.nix
kmnlib_back/application/: Cargo.toml
kmnlib_back/application/src/: lib.rs  service.rs
kmnlib_back/application/src/service/: book.rs  rent.rs  user.rs
kmnlib_back/application/src/transfer/: book.rs  rent.rs  user.rs
kmnlib_back/driver/: Cargo.toml
kmnlib_back/driver/src/: database.rs  error.rs  lib.rs
kmnlib_back/driver/src/database/: eventstore.rs  postgres.rs  redis.rs
kmnlib_back/driver/src/database/eventstore/: book.rs  rent.rs  user.rs
kmnlib_back/driver/src/database/postgres/: book.rs  rent.rs  user.rs
kmnlib_back/driver/src/database/redis/: job.rs  mq.rs
kmnlib_back/kernel/: Cargo.toml
kmnlib_back/kernel/src/: command.rs  database.rs  entity.rs  error.rs  event.rs  handler.rs  job.rs  lib.rs  mq.rs
kmnlib_back/kernel/src/command/: book.rs  rent.rs  user.rs
kmnlib_back/kernel/src/entity/: book.rs  common.rs  rent.rs  user.rs
kmnlib_back/kernel/src/entity/book/: amount.rs  id.rs  title.rs
kmnlib_back/kernel/src/entity/common/: event.rs  flag.rs  operation.rs  time.rs
kmnlib_back/kernel/src/entity/rent/: returned_at.rs
kmnlib_back/kernel/src/entity/user/: id.rs  name.rs  rent_limit.rs
kmnlib_back/kernel/src/event/: book.rs  rent.rs  user.rs
kmnlib_back/kernel/src/handler/: book.rs  rent.rs  user.rs
kmnlib_back/kernel/src/modify/: book.rs  rent.rs  user.rs
kmnlib_back/kernel/src/mq/: config.rs  handler.rs  info.rs
kmnlib_back/kernel/src/query/: book.rs  rent.rs  user.rs
kmnlib_back/migrations/: 20231125184100_init.sql
kmnlib_back/server/: Cargo.toml
kmnlib_back/server/src/: controller.rs  error.rs  handler.rs  main.rs  mq.rs  request.rs  response.rs  route.rs
kmnlib_back/server/src/mq/: command.rs
kmnlib_back/server/src/request/: book.rs  queue.rs  rent.rs  user.rs
kmnlib_back/server/src/response/: book.rs  queue.rs  rent.rs  user.rs
kmnlib_back/server/src/route/: book.rs  queue.rs  rent.rs  user.rs
kmnlib_back/server/src/route/book/: request.rs  response.rs
kmnlib_back/server/src/route/rent/: request.rs  response.rs
kmnlib_back/server/src/route/user/: request.rs  response.rs
kmnlib_fe_svelte/: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml
kmnlib_fe_svelte/src/lib/: service.ts
kmnlib_fe_svelte/src/lib/entity/: book.ts
kmnlib_fe_svelte/src/lib/service/api/: book.ts
kmnlib_fe_svelte/src/lib/service/rest/: book.ts
kmnlib_fe_svelte/src/routes/: +layout.svelte  Header.svelte
kmnlib_fe_svelte/src/routes/book/: +page.svelte
migrations/: 20231125184100_init.sql
