[package]
name = "driver"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["uuid", "postgres", "runtime-tokio-native-tls"] }
serde_json = "1.0.108"

error-stack = { workspace = true }
async-trait = { workspace = true }

kernel = { path = "../kernel" }