[package]
name = "kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uuid = { version = "1.4", features = ["serde", "v4"] }

destructure = "0.3.0"
vodca = { git = "https://github.com/turtton/vodca.git", rev = "73bc4cf4ef6730e68ca948603a5358dd0d425a88" }
serde = { version = "1.0.193", features = ["derive"] }

async-trait = "0.1.74"
error-stack = { workspace = true }

[features]
interface = []
prelude = []
default = ["interface", "prelude"]
