[workspace]
members = [
    "application",
    "kernel",
    "driver",
    "server"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["turtton"]

[workspace.dependencies]
uuid = { version = "1.4", features = ["serde", "v4"] }
time = { version = "0.3.30", features = ["serde"] }

async-trait = "0.1.74"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

error-stack = "0.4.1"