[workspace]
members = [
    "application",
    "kernel",
    "driver",
    "server"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["turtton"]

[workspace.dependencies]
uuid = { version = "1.4", features = ["serde", "v4"] }
time = { version = "0.3.30", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }

vodca = { git = "https://github.com/turtton/vodca.git", rev = "00331f8f386680b7aff095f534cd7a99c7b1db75" }
async-trait = "0.1.74"

error-stack = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }

tokio = { version = "1.0.1", features = ["full"] }
