[package]
name = "driver"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true }
time = { workspace = true }
sqlx = { version = "0.7.3", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls"] }
deadpool-redis = "0.14.0"
redis = {  version = "0.24.0", features = ["tokio", "streams"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
serde = { workspace = true }

itertools = "0.12.1"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
error-stack = { workspace = true }
async-trait = { workspace = true }

kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros"] }
test-with = { version = "*", default-features = false, features = [] }
rand = "0.8.5"
