[package]
name = "kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uuid = { workspace = true }
time = { workspace = true }

serde = { workspace = true }
destructure = "0.5.6"
vodca = { workspace = true }
strum = { version = "0.26.1", features = ["derive"] }

async-trait = { workspace = true }

error-stack = { workspace = true }

[features]
interface = []
prelude = []
default = ["interface", "prelude"]
