[package]
name = "server"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }

axum = { version = "0.7.4", features = ["json", "tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "query"] }
tokio = { version = "1.0.1", features = ["full"] }

serde = { workspace = true }
serde_json = "1.0.114"

error-stack = { workspace = true }

application = { path = "../application"}
driver = { path = "../driver"}
kernel = { path = "../kernel"}
