[package]
name = "server"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true }

tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }

axum = { version = "0.7.4", features = ["json", "tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "query"] }
tower-http = { version = "0.5.1", features = ["tokio", "cors"] }
tokio = { workspace = true }

serde = { workspace = true }
serde_json = "1.0.114"

error-stack = { workspace = true }

vodca = { workspace = true }
application = { path = "../application" }
driver = { path = "../driver" }
kernel = { path = "../kernel" }
